--- a/components/WSControls/Lists/resources/GroupTemplate.tmpl
+++ b/components/WSControls/Lists/resources/GroupTemplate.tmpl
@@ -1,1 +1,9 @@
-<ws:partial template="{{ _defaultGroupItemTemplate }}" scope="{{...}}"></ws:partial>
+<ws:partial template="{{ _defaultGroupItemTemplate }}" scope="{{...}}" event:onmousemove="_mouseLeave()"></ws:partial>
+<ws:partial
+   scope="{{...}}"
+   template="{{_listItemsTemplate}}"
+   startFnc="{{_getStartEnumerationPositionInGroup}}"
+   condFnc="{{_checkConditionForEnumerationInGroup}}"
+   endFnc="{{_getNextEnumerationPosition}}"
+/>
+<div event:onmousemove="_mouseLeave()">Футер{{item}}</div>
