https://online.sbis.ru/opendoc.html?guid=d15d3a9d-9271-426c-908c-6cbe3fe93fdc

--- a/components/SubmitPopup/SubmitPopup.less
+++ b/components/SubmitPopup/SubmitPopup.less
@@ -55,11 +55,12 @@
 .controls-SubmitPopup__button.controls-Button, .controls-SubmitPopup__button.controls-Link {
    margin: @controls-SubmitPopup-button-margin;
 }
+
+//TODO Лютые каскады. Романов Валера обещал выпилить по выполнению задачи https://online.sbis.ru/opendoc.html?guid=bfeda845-22f0-4e64-bb86-0a66d0deeaad
 .controls-SubmitPopup__button.controls-Button.controls-Button-size__default {
    min-width: @controls-SubmitPopup-button-min-width;
    height: @controls-SubmitPopup-button-height;
 }
-
-.controls-SubmitPopup__button.controls-SubmitPopup__button-mini {
+.controls-SubmitPopup__button.controls-SubmitPopup__button-mini.controls-Button.controls-Button-size__default {
    min-width: @controls-SubmitPopup-button-mini-min-width;
 }
