https://online.sbis.ru/opendoc.html?guid=f47db66a-aaf1-42b0-bf5b-b583527ec359

--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -371,6 +371,7 @@
    background: #fff;
    color: @list-view-separator-content-color;
    font-size: @list-view-separator-content-size;
+   white-space: nowrap;
    &.controls-GroupBy__separatorCollapse{
       cursor: pointer;
       &:before {
