нельзя положить внутрь тега А другой тег А https://online.sbis.ru/opendoc.html?guid=a7f2e3a9-25c8-494f-b4c4-d6683a31311e

--- a/components/Button/Button.tmpl
+++ b/components/Button/Button.tmpl
@@ -1,4 +1,4 @@
-<a name="{{_options.name}}" sbisname="{{_options.sbisname||_options.name}}" newconfig="{{_options.config}}"
+<span name="{{_options.name}}" sbisname="{{_options.sbisname||_options.name}}" newconfig="{{_options.config}}"
       event:onclick="_onMouseClick()"
       event:onmousedown="_onMouseDown()"
       event:onmouseup="_onMouseUp()"
@@ -9,9 +9,6 @@
       event:ontouchend="_onTouchEnd()"
       event:ontouchmove="_onTouchMove()"
       tabindex="{{_options.tabindex}}"
-      href="{{enabled ? href}}"
-      target="{{inNewTab ? '_blank'}}"
-      rel="{{href ? noreferrer}}"
       class="controls-Button controls-ButtonBase
  controls-Button-size__{{!!_options.size ? _options.size : 'default'}}
  controls-Button-color__{{_options.primary ? 'primary':'default'}}
@@ -30,4 +27,4 @@
             <span class="controls-Button__text js-controls-Button__text {{_options._textClass}}"><ws:partial template="{{_options.caption}}" /></span>
         </ws:if>
     </span>
-</a>
+</span>
