--- a/components/WSControls/Buttons/Button.tmpl
+++ b/components/WSControls/Buttons/Button.tmpl
@@ -1,5 +1,5 @@
-<a class="controls-ButtonBase {{!visible ? ' ws-hidden'}}" href="{{enabled ? href}}" target="{{inNewTab ? '_blank'}}" rel="{{href ? noreferrer}}" title="{{tooltip}}" disabled="{{!enabled ? 'disabled'}}" type="button">
+<span class="controls-ButtonBase {{!visible ? ' ws-hidden'}}" title="{{tooltip}}" disabled="{{!enabled ? 'disabled'}}" type="button">
     <span class="controls-Button__wrapper">
         <ws:partial template="{{contentTemplate}}" scope="{{...}}"></ws:partial>
     </span>
-</a>
+</span>
