--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -200,7 +200,7 @@
       .controls-DateRangeBigChoose__yearsRange {
          .range-button-bar-mixin();
 
-         a.controls-Button {
+         span.controls-Button {
             .inline-flexbox();
             .justify-content(center);
             .align-items(center);
@@ -323,7 +323,7 @@
 
       .controls-DateRangeBigChoose__months-range-btn-wrapper {
          .box-sizing(border-box);
-         > a {
+         > span {
             width: @date-range-big-choose-left-right-width;
             min-width: @date-range-big-choose-left-right-width;
             height: 100%;
@@ -339,7 +339,7 @@
             border-top: none;
             + .controls-DateRangeBigChoose__months-range-btn-wrapper:not(.controls-RangeSelectable__item-selected) {
                border-top: 1px solid @date-range-big-choose-border-color;
-               > a {
+               > span {
                   border-top: none;
                }
             }
@@ -354,7 +354,7 @@
          left: 0;
 
          .controls-DateRangeBigChoose__months-range-btn-wrapper {
-            > a {
+            > span {
                border-left-color: transparent;
             }
             &.controls-DateRangeBigChoose__months-range-btn-wrapper0 {
@@ -379,7 +379,7 @@
             &.controls-DateRangeBigChoose__months-range-btn-wrapper0 {
                height: ~"calc("@date-range-big-choose-months-range-btn-height~"*2 + "@date-range-big-choose-months-margin~" - 1px)";
             }
-            > a {
+            > span {
                float: right;
                border-right-color: transparent;
                &:after {
@@ -428,7 +428,7 @@
          font-size: 0;
          .range-vertical-button-bar-mixin();
 
-         a.controls-Button {
+         span.controls-Button {
             .inline-flexbox();
             .justify-content(flex-start);
             .align-items(center);
@@ -532,16 +532,16 @@ body:not(.ws-is-mobile-platform) {
       .controls-DateRangeBigChoose__months {
 
          .controls-DateRangeBigChoose__months-range-btn-wrapper {
-            > a:hover {
+            > span:hover {
                font-weight: bold;
             }
             &:not(.controls-RangeSelectable__item-selected) {
                &:hover {
                   background-color: @date-range-big-choose-bg-hovered-color;
-                  > a {
+                  > span {
                      border-top: none;
                   }
-                  + .controls-DateRangeBigChoose__months-range-btn-wrapper > a {
+                  + .controls-DateRangeBigChoose__months-range-btn-wrapper > span {
                      border-top: none;
                   }
                   + .controls-DateRangeBigChoose__months-range-btn-wrapper {
@@ -561,7 +561,7 @@ body:not(.ws-is-mobile-platform) {
 
          .controls-DateRangeBigChoose__months-quarterRange {
             .controls-DateRangeBigChoose__months-range-btn-wrapper:not(.controls-RangeSelectable__item-selected) {
-               > a:hover {
+               > span:hover {
                   border-left-color: @date-range-big-choose-bg-hovered-color;
                   border-right-color: @date-range-big-choose-bg-hovered-color;
                }
@@ -570,7 +570,7 @@ body:not(.ws-is-mobile-platform) {
 
          .controls-DateRangeBigChoose__months-halfyearRange {
             .controls-DateRangeBigChoose__months-range-btn-wrapper:not(.controls-RangeSelectable__item-selected) {
-               > a:hover {
+               > span:hover {
                   border-right-color:  @date-range-big-choose-bg-hovered-color;
                   border-left-color:  @date-range-big-choose-bg-hovered-color;
                }
@@ -580,7 +580,7 @@ body:not(.ws-is-mobile-platform) {
 
       .controls-DateRangeBigChoose__dates {
          .controls-DateRangeBigChoose__dates-months {
-            a.controls-Button:not(.controls-RangeSelectable__item-selected) {
+            span.controls-Button:not(.controls-RangeSelectable__item-selected) {
                &:hover {
                   border-left-color: @date-range-big-choose-bg-hovered-color;
                   background: @date-range-big-choose-bg-hovered-color;
@@ -596,7 +596,7 @@ body:not(.ws-is-mobile-platform) {
    .controls-DateRangeBigChoose {
       .controls-DateRangeBigChoose__dates {
          .controls-DateRangeBigChoose__dates-months {
-            a.controls-Button {
+            span.controls-Button {
                &:hover {
                   color: @date-range-big-choose-month-hovered-color;
                }
