--- a/components/PasswordTextBox/resources/showPasswordTemplate.tmpl
+++ b/components/PasswordTextBox/resources/showPasswordTemplate.tmpl
@@ -1,5 +1,7 @@
-<ws:SBIS3.CONTROLS.IconButton
-   name = "showPassword"
-   icon = "icon-16 icon-Show icon-primary"
-   tooltip = "Показать"
-/>
+<ws:if data="{{showPassword}}">
+   <ws:SBIS3.CONTROLS.IconButton
+      name = "showPassword"
+      icon = "icon-16 icon-Show icon-primary"
+      tooltip = "Показать"
+   />
+</ws:if>
