поправил ошибку, не рисовался первый элемент группы

--- a/components/WSControls/Lists/resources/GroupItemTemplate.tmpl
+++ b/components/WSControls/Lists/resources/GroupItemTemplate.tmpl
@@ -1,3 +1,3 @@
-<div class="controls-GroupBy" data-group="{{groupId}}">
+<div class="controls-GroupBy" data-group="{{groupId}}" event:onmousemove="_mouseLeave()">
     <ws:partial template="{{ contentTemplate }}" scope="{{...}}"></ws:partial>
 </div>
