--- a/components/WSControls/Lists/resources/GroupTemplate.tmpl
+++ b/components/WSControls/Lists/resources/GroupTemplate.tmpl
@@ -1,4 +1,4 @@
-<ws:partial template="{{ _defaultGroupItemTemplate }}" scope="{{...}}" event:onmousemove="_mouseLeave()"></ws:partial>
+<ws:partial template="{{ _defaultGroupItemTemplate }}" scope="{{...}}"></ws:partial>
 <ws:partial
    scope="{{...}}"
    template="{{_listItemsTemplate}}"
