https://online.sbis.ru/opendoc.html?guid=3a920d66-bf17-4c5c-bd6a-4eaf88190a9c

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -64,6 +64,11 @@
          display: none;
        }
      }
+      &.controls-DropdownList__defaultItem {
+         .controls-DropdownList__selectedItem .controls-DropdownList__textWrapper {
+            color: @DropdownList-linkStyleColor;
+         }
+      }
    }
    &.controls-DropdownList__type-filter {
       .controls-DropdownList__afterCaptionWrapper {
