https://online.sbis.ru/opendoc.html?guid=13d7484d-c39f-4a82-a736-7d7fdd03fa7c

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -92,7 +92,7 @@
 @text-box-editor-text-color:              #999999;
 @combo-box-picker-show-background-color : #ffffff;
 @combo-box-picker-show-border-color:	   #0055BB;
-@compo-box-picker-show-color:             #fff;
+@compo-box-picker-show-color:             #000;
 @text-box-focus-bg:                       #fff;
 @text-box-hover-border-color:             rgb(204, 204, 204);
 @text-box-disabled-border-bottom:         @default-border-width solid @check-box-disabled-color;
