--- a/components/FilterButton/FilterButtonArea/FilterButtonArea.less
+++ b/components/FilterButton/FilterButtonArea/FilterButtonArea.less
@@ -187,8 +187,10 @@
 
 .controls__filterButton__picker .controls-FieldLink__Link.ws-enabled {
 	color: @controls-FieldLink-FilterButton-color;
-	// TODO https://online.sbis.ru/opendoc.html?guid=e780f10e-3409-4390-98be-510dc06f546b аналогично стилям ссылке
-	text-decoration: none !important;
+
+	.controls-Button__text {
+		text-decoration: none;
+	}
 	
 	&.ws-enabled:hover {
 		color: @controls-FieldLink-FilterButton-color-hover;
