https://online.sbis.ru/opendoc.html?guid=f56d13ff-d2de-499d-9c43-7f98b130fefc

--- a/components/TextArea/resources/inputField.tmpl
+++ b/components/TextArea/resources/inputField.tmpl
@@ -3,4 +3,5 @@
    class="controls-TextArea__field controls-TextBox__field js-controls-TextBox__field ws-invisible"
    placeholder="{{ placeholder}}"
    maxLength="{{ maxLength}}"
+   rows={{ minLinesCount ? minLinesCount}}
 >{{ text ? text|sanitize }}</textarea>
