--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -760,7 +760,7 @@
 @bread-crumb-title-hover-color:           @default-hover-color;
 @breadcrumbs-top:                         0;
 @breadcrumbs-smallItems-font-size:        1rem;
-@breadcrumbs-arrow-top:                   0;
+@breadcrumbs-arrow-top:                   1px;
 @breadcrumbs-small-items-top:             0;
 // EditDialog
 @editdialog-applybutton-width:            auto;
