--- a/components/ProgressBar/ProgressBar.tmpl
+++ b/components/ProgressBar/ProgressBar.tmpl
@@ -1,6 +1,9 @@
 <div class="controls-ProgressBar controls-ProgressBar_align-{{_options.progressPosition}}">
-   <div
-      class="controls-ProgressBar__progress controls-ProgressBar__progress_size controls-ProgressBar__progress_color controls-ProgressBar__progress_colorValue"
-      style="background-size: {{_progressPercent}} 100%;"
-   >{{_progressPercent}}</div>
+   <ws:template name="progress">
+      <div
+         class="controls-ProgressBar__progress controls-ProgressBar__progress_size controls-ProgressBar__progress_color controls-ProgressBar__progress_colorValue"
+         style="background-size: {{progressPercent}} 100%;"
+      >{{progressPercent}}</div>
+   </ws:template>
+   <ws:partial template="progress" progressPercent="{{_getProgressPercent(_options.minimum, _options.maximum, _options.progress, _options.step)}}%"/>
 </div>
