--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -12,10 +12,14 @@
    }
    &.ws-disabled {
       .controls-TextBox__beforeFieldWrapper {
+         .flex-wrap(wrap);
+         .flex-direction(row);
          max-width: 100%;
       }
       //todo:
       .controls-Link.controls-FieldLink__showAllLinks {
+         top: -@default-base-line-height;
+         background: @text-box-bg;
          &:after {
             content: '';
             position: absolute;
@@ -288,17 +292,14 @@
    width: 20px;
    line-height: @controls-FieldLink-showAllLinks-lineHeight;
    padding: @controls-FieldLink-showAllLinks-padding;
-   display: inline-block;
+   display: none;
    .flex-shrink(0);
 }
-
-
-
-.controls-FieldLink__selected:not(.controls-FieldLink__selected-single) .controls-FieldLink__dropAllLinks {
-   display: inline-block;
+.controls-FieldLink__selected:not(.controls-FieldLink__selected-single) {
+   .controls-FieldLink__dropAllLinks, .controls-FieldLink__showAllLinks {
+      display: inline-block;
+   }
 }
-
-
 .ws-is-firefox {
    .controls-FieldLink {
       vertical-align: middle;
