--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -356,6 +356,7 @@
       height: @DropdownList-footer-buttonsBlock-height;
       position: @DropdownList-footer-buttonsBlock-position;
       background: @DropdownList-picker-menu-item-color;
+      .flex-shrink(0);
 
       .controls-DropdownListFooter_hasMore, .controls-DropdownListFooter_select {
          position: @DropdownList-footer-buttons-position;
