построение на сервере

--- a/components/WSControls/Containers/Page.html
+++ b/components/WSControls/Containers/Page.html
@@ -4,8 +4,8 @@
 <body id="body" key="1_2_">
     <script>
        window.wsConfig = {
-          wsRoot: '/sbis3-ws/ws/',
-          resourceRoot: '/components'
+          wsRoot: '/ws/',
+          resourceRoot: '/resources/'
        };
     </script>
     <script type="text/javascript" src="/sbis3-ws/ws/ext/requirejs/require.js"></script>
