--- a/components/WSControls/Containers/Page.tmpl
+++ b/components/WSControls/Containers/Page.tmpl
@@ -16,8 +16,8 @@
 
         <script>
            window.wsConfig = {
-              wsRoot: '/sbis3-ws/ws/',
-              resourceRoot: '/components'
+              wsRoot: '/ws/',
+              resourceRoot: '/resources/'
            };
         </script>
         <script type="text/javascript" src="{{wsRoot}}ext/requirejs/require.js"></script>
