доработка меню операций над записью по стандарту если меню перевернуто по вертикали, то элементы должны идти в обратном порядке https://online.sbis.ru/opendoc.html?guid=4872c138-5419-4aec-a9d6-ae879ff3d5c7

--- a/components/ListView/resources/ItemActionsGroup/ItemActionsGroup.less
+++ b/components/ListView/resources/ItemActionsGroup/ItemActionsGroup.less
@@ -146,6 +146,13 @@
       margin: @list-view-actions-menu-margin;
    }
 
+   &.controls-popup-revert-vertical {
+      .controls-Menu__itemsContainer {
+         .inline-flexbox();
+         .flex-direction(column-reverse);
+      }
+   }
+
    .controls-MenuItem {
       &.controls-ListView__item {
          white-space: nowrap;
