--- a/components/WSControls/Lists/ListView.less
+++ b/components/WSControls/Lists/ListView.less
@@ -2,6 +2,7 @@
 .controls-ListView__virtualScrollTopPlaceholder,
 .controls-ListView__virtualScrollBottomPlaceholder {
   position: relative;
+  height: 1px;
 }
 
 .controls-ListView__virtualScrollTopLoadTrigger,
