https://online.sbis.ru/opendoc.html?guid=f68b7065-f586-4a15-9e87-b91138961440

--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -65,6 +65,7 @@
 }
 .controls__filterButton__filterLine-items, .controls__filterButton__filterLine-text {
    .text-overflow();
+   .flex-shrink(1);
 }
 
 .controls__filterButton__filterLine-items, .controls__filterButton__filterLine {
