--- a/components/DatePicker/DatePicker.less
+++ b/components/DatePicker/DatePicker.less
@@ -1,36 +1,9 @@
 @import "../DateBox/DateBox";
 .controls-DatePicker {
-   position: relative;
    display: inline-block;
-
-   .controls-DatePicker__dateBox.controls-DateBox__fieldWrapper {
-      margin-right: calc(~"@{date-picker-calendar-icon-width} + 6px");
-      display: block;
-   }
-
-   &.controls-DatePicker_hiddenIcon .controls-DatePicker__dateBox {
-      margin-right: 0;
-   }
-
-   .controls-DatePicker__calendarWrapper {
-      position: relative;
-      float: right;
-      width: @date-picker-calendar-icon-width;
-      min-height: 19px;
-      margin: 0;
-   }
-
-   .controls-DatePicker__button {
-      position: absolute;
-      top: @date-picker-calendar-icon-top-offset;
-      left: @date-picker-calendar-icon-left-offset;
-      .controls-Button__icon {
-         font-size: @date-picker-calendar-icon-height !important;
-         line-height: @date-picker-calendar-icon-height !important;
-         height: @date-picker-calendar-icon-height;
-         width: @date-picker-calendar-icon-width;
-      }
-   }
+}
+.controls-DatePicker__button {
+   margin-left: @date-picker-icon-margin-left;
 }
 .controls-DatePicker__timePicker-border.controls-FloatArea {
    border: @float-area-border;
