--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -325,6 +325,7 @@
 @text-box-overflow:                       ellipsis;
 //Formatted text box
 @formatted-text-box-wrapper-min-height:   @text-box-field-min-height;
+@formatted-text-box-field-padding:        0;
 // DateBox
 @date-box-wrapper-border-color:           @text-box-border-color @text-box-border-color @text-box-bottom-border-color @text-box-border-color; // @default-border-color
 @date-box-field-text-color:               @default-text-color;
@@ -380,10 +381,7 @@
 @suggest-list-item-hover-bg:              #f3f3f3;
 @suggest-list-item-selected-bg:           darken(@suggest-list-item-hover-bg, 5%);
 //Date picker
-@date-picker-calendar-icon-top-offset:    0;
-@date-picker-calendar-icon-left-offset:   0;
-@date-picker-calendar-icon-height: 			3rem;
-@date-picker-calendar-icon-width: 			2.786rem;
+//@date-picker-icon-margin-left:   6px; TODO: поставить правильное значение
 //Calendar
 @calendar-width:                          auto;
 @calendar-bg:                             @basic-block-bg-color;
