https://online.sbis.ru/opendoc.html?guid=22b9ec0c-0afc-4a9e-853d-fb057240f94e

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -1034,6 +1034,7 @@
 @list-view-items-toolbar-bottom:          0.214rem;
 @list-view-items-toolbar-font-family:     'carrypresto-icons';
 @search-left-margin:                      .57rem;
+@controls-view-eip-padding-DEFAULT:                                                                                     .857rem;
 @controls-view-padding-DEFAULT:           .857rem;
 @combo-box-picker-border:                 @default-border-width solid @default-border-color-second;
 @data-grid-row-selected-main-bg:          @basic-block-bg-color;
