https://online.sbis.ru/opendoc.html?guid=220f4565-e9a7-45f2-b8d1-fa211bc128ea

--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -108,7 +108,7 @@
       color: @default-placeholder-color;
       font: inherit;
       text-align: inherit;
-      padding: @text-box-field-padding;
+      padding: @text-box-wrapper-padding;
    }
 }
 .controls-TextBox__field-uppercase {
