https://online.sbis.ru/opendoc.html?guid=761ec54c-4367-438e-a1b3-91490c45c4ec

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -41,7 +41,8 @@
          }
       }
       .controls-FieldLinkItemsCollection {
-         .justify-content()
+         .justify-content();
+         .flex-shrink();
       }
    }
 }
