--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -290,7 +290,7 @@
 @menu-button-menu-border-width:           @default-border-width;
 @menu-button-menu-margin:                 -8px 0 0 0;
 @menu-button-menu-border-color:           #23b8ff;
-@menu-link-header-bg-color:               #5bafe7;
+@menu-link-header-bg-color:               @menu-header-bg-color;
 @menu-link-icon-24-top:                   -.14rem;
 @menu-icon-menu-margin:                   -.25rem 0 0 -.1442rem;
 @menu-icon-big-menu-margin:               -.287rem 0 0 .43rem;
@@ -900,7 +900,6 @@
 @scrollpager-border:                      none;
 @scrollpager-bottom:                      .3333rem;
 @closeBigButtonWidth:                     3rem;
-@menu-header-bg-color:                    #23b8ff;
 @date-range-big-header-bg:                #2c3e50;
 @date-range-big-choose-border-color:	   #3f566d;
 @date-range-big-choose-width:				   25.8rem;
