отказ от float_area

--- a/components/RichEditor/RichEditorComponents/RichTextArea/resources/ImageOptionsPanel/ImageOptionsPanel.tmpl
+++ b/components/RichEditor/RichEditorComponents/RichTextArea/resources/ImageOptionsPanel/ImageOptionsPanel.tmpl
@@ -1,4 +1,4 @@
-<div class="controls-Menu__Popup controls-ImageOptionsPanel  controls-FloatArea">
+<div class="controls-Menu__Popup controls-ImageOptionsPanel">
    <ws:SBIS3.CONTROLS.Link
       name="replaceButton"
       class="controls-ImageOptionsPanel__changeButton"
