--- a/components/RichEditor/RichEditorComponents/RichTextArea/resources/ImageOptionsPanel/ImageOptionsPanel.less
+++ b/components/RichEditor/RichEditorComponents/RichTextArea/resources/ImageOptionsPanel/ImageOptionsPanel.less
@@ -1,7 +1,7 @@
 .controls-ImageOptionsPanel {
    border-radius: 1px;
    padding: 0px;
-   &.controls-FloatArea {
+   &.controls-Menu__Popup {
       background-color: #E5ECF5;
       height: 32px;
       min-width: 130px;
