https://online.sbis.ru/opendoc.html?guid=f90009e0-f6a5-43b5-9af0-bc4f2c776580

--- a/components/MoneyTextBox/MoneyTextBox.less
+++ b/components/MoneyTextBox/MoneyTextBox.less
@@ -20,6 +20,7 @@
   .controls-TextBox__wrapper {
     padding: @text-box-wrapper-padding;//чтобы копейки были близко к основному тексту в задизабленом состоянии
     .box-sizing(border-box);
+    .justify-content(flex-end)
   }
   .controls-TextBox__placeholder {
     z-index: 0;
