меню операций над записью по стандарту https://online.sbis.ru/opendoc.html?guid=a239e451-1d10-4d4d-8e6c-e9886e17ee2c

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -691,6 +691,7 @@
 @menu-expand-height:                      16px;
 @menu-expand-top-offset:                  8px;
 @menu-expand-right-offset:                8px;
+@menu-expand-icon-font-size:              16px;
 
 @menu-expand-border-width:                0;
 @menu-expand-border-style:                solid;
@@ -1880,6 +1881,8 @@
 @controls-OperationsPanel-triangle-width:           8px;
 
 @controls-OperationsPanel-actions-margin:           0 4px;
+@controls-OperationsPanel-menu-icon-size:           @icon-medium-size;
+@controls-OperationsPanel-menu-close-button-right:  10px;
 
 @controls-OperationsPanel-separator-margin-left:    8px;
 @controls-OperationsPanel-separator-bg:             @gray-ccc-color;
