--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -18,8 +18,12 @@ body {
    // в онлайне такие кнопки завязаны на жесткие стили controls-IconButton__round-border-24, что неправильно
    // для редизайна нужно перейти на относительные названия
    .controls-MenuIcon__Menu.controls-Menu.controls-Menu__Popup.controls-Menu__hide-menu-header {
-     margin: -.39rem 0 0 -.106rem;
+     margin: -.32rem 0 0 -.606rem;
    }
+   .controls-operationsPanel__itemsMenu_picker.controls-MenuIcon__Menu.controls-Menu.controls-Menu__hide-menu-header {
+     margin: -.32rem 0 0 1.32rem;
+   }
+
 
    //TODO: удалить это когда будет нормальный пэйджинг, не из ws-a
    .ws-paging{
