--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -257,14 +257,16 @@
 @menu-border-width:                       @default-border-width;
 @menu-border-color:                       @default-border-color-second;
 @menu-header-caption-color:               #e4e4e4;
-@menu-expand-width:                       .2857rem;
+@menu-expand-width:                       @icon-large-size;
+@menu-expand-height:                      @icon-large-size;
 @menu-expand-top-offset:                  .7142rem;
 @menu-expand-right-offset:                .4285rem;
-@menu-expand-border-width:                .2857rem 0 .2857rem .2857rem;
+@menu-expand-border-width:                0;
 @menu-expand-border-color:                transparent transparent transparent @primary-color;
 @menu-expand-bg:                          transparent;
 @menu-expand-hover-border-color:          transparent transparent transparent @secondary-color;
 @menu-header-height:                      3.57rem;
+@menu-expand-icon-font-size:              @icon-large-size;
 @menu-big-header-height:                  1.1428rem;
 @menu-header-icon-color:                  @default-hover-color;
 @menu-header-padding:                     .14rem 0.57rem;
@@ -655,11 +657,13 @@
 @controls-OperationsPanel-height:         3.57rem;
 @controls-OperationsPanel-bg:             #354B62;
 @controls-OperationsPanel-actions-margin: 0 .2857rem;
+@controls-OperationsPanel-menu-icon-size:           @icon-large-size;
 @controls-OperationsPanel-actions-align:  baseline;
 @controls-OperationsPanel-separator-width:  2px;
 @controls-OperationsPanel-separator-height: 1.9285rem;
 @controls-OperationsPanel-separator-line-height: 2.5rem;
 @controls-OperationsPanel-separator-bg:   #38546C;
+@controls-OperationsPanel-menu-close-button-right: 0rem;
 //OperationsPanelButton
 @controls-OperationsPanelButton-width:    0.86rem;
 @controls-OperationsPanelButton-vert-height:3.57rem;
