--- a/components/OperationsPanel/OperationsPanel.less
+++ b/components/OperationsPanel/OperationsPanel.less
@@ -64,20 +64,24 @@
 
    }
 }
-
-.controls-operationsPanel__itemsMenu_picker .controls-PopupMixin__closeButton,
-.controls-operationsPanel__itemsMenu_picker .controls-PopupMixin__closeButton:hover{
-   background: none;
-   top: 8px;
-   right: 10px;
-}
-
-.controls-operationsPanel__itemsMenu_picker.controls-MenuIcon__Menu .controls-MenuItem {
-   padding-right: 36px;
-}
-
 .controls-operationsPanel__itemsMenu_picker {
    .controls-operationsPanel-modes();
+
+   &.controls-MenuIcon__Menu {
+      .controls-MenuItem {
+         padding-right: 36px;
+      }
+   }
+
+   .controls-PopupMixin__closeButton, .controls-PopupMixin__closeButton:hover {
+      background: none;
+      top: 8px;
+      right: @controls-OperationsPanel-menu-close-button-right;
+   }
+}
+
+.controls-operationsPanel__itemsMenu .icon-size, .controls-operationsPanel__itemsMenu_picker .controls-PopupMixin__closeButton.icon-size{
+   .icon-size(@controls-OperationsPanel-menu-icon-size);
 }
 
 .controls-OperationPanel__Menu {
