https://online.sbis.ru/opendoc.html?guid=ee42eb3c-46bc-4146-80fc-b913fbdaacb3

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -51,7 +51,7 @@
       border-bottom: none;
       .controls-Button__text {
          margin: 0;
-         overflow: initial;
+         overflow: visible;
       }
    }
    :first-child {
@@ -220,7 +220,7 @@
             .controls-Button__text {
                margin: 0;
                padding: 0;
-               overflow: initial;
+               overflow: visible;
             }
             &.controls-RangeSelectable__item.controls-RangeSelectable__item-selected:not(.controls-RangeSelectable__item-selectedStart) {
                border-left: none;
