--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -83,3 +83,6 @@
 @DropdownList-picker-head-duplicate-type-top-padding:                                                                   0px;//todo: krasilnikov
 @DropdownList-picker-menu-item-padding:                                                                                 5px 8px 4px 8px;
 @check-box-caption-margin-left:                                                                                         4px;//todo: juravlev
+//MoveDialog
+@controls-movedialog-min-width:                 536px;
+@controls-movedialog-max-width:                 536px;
