https://online.sbis.ru/opendoc.html?guid=3d5d3818-84c4-418c-bb04-50c52d20ef81

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -241,7 +241,9 @@
 //money
 @money-decorator-integer-accent-results-font-color:#313E78;
 @money-decorator-integer-accent-registry-font-color:#313E78;
-
+//infobox
+@Infobox-cross-color:                     #2D68B5;
+@Infobox-cross-color-hover:               #313E78;
 //sundry
 @date-range-big-choose-bg-hovered-color:  rgb(240, 245, 251);
 @date-range-big-choose-header-apply-button-icon-margin-left:-1rem;
