--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -842,10 +842,10 @@ body {
          height: 3rem!important;
          right: 0;
          top: 0;
-         color: @link-text-color!important;
+         color: @Infobox-cross-color!important;
          overflow: hidden;
          &:hover {
-            color: @link-hover-text-color!important;
+            color: @Infobox-cross-color-hover!important;
          }
          &:before {
             line-height: 2.7rem!important;
