--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -997,6 +997,9 @@
 @DropdownList-footer-hasMore-top:                     1rem;
 @DropdownList-footer-select-icon-container-size:      3rem;
 @DropdownList-footer-select-icon-size:                2.3rem;
+//infobox
+@Infobox-cross-color:                                 #E4E4E4;
+@Infobox-cross-color-hover:                           #B9E9FF;
 //money
 @money-decorator-integer-accent-results-font-color:#FFCC99;
 @money-decorator-integer-no-accent-results-font-color:@disabled-color;
