--- a/components/MonthView/MonthView.less
+++ b/components/MonthView/MonthView.less
@@ -42,16 +42,16 @@
          }
 
          .controls-MonthView__dayTitle {
+            .box-sizing(border-box);
+            height: 100%;
+         }
+         .controls-MonthView__dayBorder + .controls-MonthView__dayTitle {
             position: absolute;
             top: 0;
             bottom: 0;
-            left: 0;
-            right: 0;
-         }
-         .controls-MonthView__dayBorder + .controls-MonthView__dayTitle {
-               left: 7px;
-               right: 7px;
-               padding: 8px 0 0 0;
+            left: 7px;
+            right: 7px;
+            padding: 8px 0 0 0;
          }
          //width: @month-view-day-cell-width;
          height: @month-view-day-table-cell-height;
