--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -35,6 +35,7 @@
    margin: @controls-filterButton-filterLine-margin;
    cursor: pointer;
    color: @controls-filterLine-link-color;
+   font-size: @default-font-size;
    
    &:not(.ws-disabled) {
       .controls__filterButton__filterLine-items:hover {
