https://online.sbis.ru/opendoc.html?guid=14b58426-2a66-494d-98b1-ab08bcd5a47f

--- a/components/ScrollContainer/ScrollContainer.less
+++ b/components/ScrollContainer/ScrollContainer.less
@@ -85,7 +85,7 @@ body.ws-is-ie .controls-ScrollContainer__content {
    -webkit-overflow-scrolling: auto!important;
 }
 
-.controls-ScrollContainer__content-overflowHidden {
+.controls-ScrollContainer__content.controls-ScrollContainer__content-overflowHidden {
    overflow: hidden;
 }
 
