https://online.sbis.ru/opendoc.html?guid=5be491a4-657e-421c-b828-ed9acc2b47da

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -329,11 +329,15 @@ body .ws-field-button.ws-button-classic.sbisname-window-title-close.ws-enabled {
    // Перед тем как править стили для кнопки закрытия прочитай комментарий по .ws-float-close.sbisname-window-title-close
 }
 
+//Удалить, как будет темизация для engine.
 .controls-Browser {
    .controls-Browser__tableCell-search {
       .controls-Browser__selectAllCheckBox {
          .align-self(center);
       }
+   }
+   .controls__filterButton {
+      margin-top: 8px;
    }
    .controls-Browser__search {
       width: 21.4285rem;
