реверстка кнопок, перенес иконку https://online.sbis.ru/opendoc.html?guid=9db5f63b-513c-4cda-8eea-5a361d708b1d

--- a/themes/header.less
+++ b/themes/header.less
@@ -30,7 +30,7 @@
   .ws-header-mixin(@link-header-padding-left, @link-header-padding-right, @link-header-font, @link-header-color);
   text-decoration: @link-header-text-decoration;
 
-  &:after {
+  .controls-Button__wrapper:after {
     display: inline-block;
     width: 8px;
     .ws-header-content-mixin(@link-header-after-content, @link-header-after-font, @link-header-after-color);
