https://online.sbis.ru/opendoc.html?guid=ebdf4710-1121-4937-821b-74c92061c957

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1,6 +1,9 @@
 @import "defaults";
 @import "colors";
 @import "sizes";
+//Переменные с версиями шрифтов
+@tensorFontVer:                           '1.0.0';
+@emojiFontVer:                            '1.0.0';
 // Кошерные переменные "на выход"
 @default-text-size:                       14px;
 @small-text-size:                         12px;
