выровнял иконку в пунктах меню по шапке. редизайн https://online.sbis.ru/opendoc.html?guid=0864ce69-2969-4ffc-b06d-041777af1f46

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -278,7 +278,7 @@
 @menu-item-hover-icon-color:              @primary-color!important;
 @menu-item-default-padding:               0 .57rem;
 @menu-item-icon-top-offset:               0.2805rem; // (3.57 - 3) /2
-@menu-item-icon-left-offset:              -.4232rem;
+@menu-item-icon-left-offset:              0;
 @menu-item-icon24-top-offset:             0;
 @menu-item-icon24-top-offset-big:         0;
 @menu-item-icon24-left-offset:            -.57rem;;
