--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -66,6 +66,13 @@
    }
 }
 
+// Выпилить в 3.17.150 с отказом от кнопок со стилями
+.controls-DateRangeBigChoose__years-yearsRange-btn {
+   :not(.controls-Button__big).controls-Button-size__default.controls-Button .controls-Button__wrapper {
+      padding: 0;
+   }
+}
+
 .controls-DateRangeBigChoose {
 
    background-color: @date-range-big-bg;
