поправил перерисовку вернул модификатор https://online.sbis.ru/opendoc.html?guid=2f094761-177a-4903-88fc-d5080cb9f9a8

--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -28,6 +28,12 @@
     }
   }
 
+  &.controls-Link__underline {
+    .controls-Button__text {
+      text-decoration: underline;
+    }
+  }
+
   // Button's icon
   .controls-Button__icon {
     left: 0;
@@ -94,6 +100,7 @@
     }
   }
 }
+
 
 .controls-Link-link {
   .inline-flexbox();
