https://online.sbis.ru/opendoc.html?guid=5db686b0-3e65-4aae-b3e8-e550159a9405

--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -67,7 +67,7 @@
 //grid
 @data-grid-check-box-left:                                                                                              0px;//todo: juravlev
 //image
-@editdialog-applybutton-top:                                                                                            10px;//todo: borisov
+@editdialog-applybutton-top:                                                                                            8px;
 @editdialog-template-minwidth:                                                                                          510px;//todo: borisov
 //submit-popup
 @controls-SubmitPopup-size-big-width:                                                                                   800px;//todo: stepin
