--- a/themes/general.less
+++ b/themes/general.less
@@ -1,6 +1,11 @@
 @import "header";
 @import "mixins";
 
+body {
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 button::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
