https://online.sbis.ru/opendoc.html?guid=68009bda-0ee4-46dc-89de-96eb2a5eca6e

--- a/themes/mixins.less
+++ b/themes/mixins.less
@@ -57,21 +57,25 @@
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     user-select: none;
+    text-overflow:ellipsis;
   }
 
   &:-moz-placeholder {
      color: darken(@text-box-placeholder-color, 17%);
     -moz-user-select: none;
+    text-overflow:ellipsis;
   }
 
   &::-moz-placeholder {
      color: darken(@text-box-placeholder-color, 17%);
     -moz-user-select: none;
+    text-overflow:ellipsis;
   }
 
   &:-ms-input-placeholder {
      color: @text-box-placeholder-color;
     -ms-user-select: none;
+    text-overflow:ellipsis;
   }
 }
 
