--- a/components/SubmitPopup/SubmitPopup.less
+++ b/components/SubmitPopup/SubmitPopup.less
@@ -22,6 +22,7 @@
 
 .controls-SubmitPopup__message{
    font-size: @controls-SubmitPopup-message-font-size;
+   line-height: normal;
    font-weight: @controls-SubmitPopup-message-font-weight;
    color: @controls-SubmitPopup-message-color;
    margin-bottom: @controls-SubmitPopup-message-margin-bottom;
@@ -29,6 +30,7 @@
 
 .controls-SubmitPopup__details{
    font-size: @controls-SubmitPopup-details-font-size;
+   line-height: normal;
    color: @controls-SubmitPopup-details-color;
 }
 
