https://online.sbis.ru/opendoc.html?guid=1be9a827-804a-4e6b-bf17-ee069cb01c16

--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -86,3 +86,5 @@
 //MoveDialog
 @controls-movedialog-min-width:                 536px;
 @controls-movedialog-max-width:                 536px;
+//time-header:
+@time-header-icon-size:																																																	@default-icon-size-large;
