--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -57,7 +57,7 @@
 @link-disabled-text-color:                rgba(102,170,221, .2);
 @link-header-hover-color:                 @default-hover-color;
 //Icon Button
-@icon-button-round-border-width:          0;
+@icon-button-round-border-width:          auto;
 @icon-button-round-border-height:         2.286rem;
 @icon-button-round-border-line-height:    2.2rem;
 @border-radius:                           0;
