https://online.sbis.ru/opendoc.html?guid=3876bafd-89a6-4131-894d-93001c533350

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -739,7 +739,7 @@
 @controls-FieldLink-linkItem-cross-top:      -.14rem;
 @controls-FieldLink-linkItem-cross-padding:  0;
 @controls-FieldLink-showAllLinks-padding:    0 1rem 0 0.14rem;
-@controls-FieldLink-afterField-padding:      0 .14rem 0 0;
+@controls-FieldLink-afterField-padding:      0;
 @controls-FieldLink-disabled-item-single-padding:  0 0 0 .56rem;
 @controls-FieldLink-disabled-item-single-margin: 0;
 @controls-FieldLink-afterField-background:   transparent;
