перенес файлы из WSDemo в Engine
https://online.sbis.ru/opendoc.html?guid=7dfd5ef0-f03f-40af-897f-4308c014ebfa

--- a/components/WSControls/Templates/OnlineTemplate.tmpl
+++ b/components/WSControls/Templates/OnlineTemplate.tmpl
@@ -8,11 +8,11 @@
                 </a>
             </ws:if>
         </div>
-        <ws:WSDemo.Navigation.Navigation
+        <ws:TestsPlatform.Navigation.Navigation
                 name="OnlineNavigation"
                 workspace="{{ _options.workspace }}"
                 header="{{ _options.header }}">
-        </ws:WSDemo.Navigation.Navigation>
+        </ws:TestsPlatform.Navigation.Navigation>
     </div>
     <div class="controls-Online__center">
         <div class="controls-Online__centerHeader">
