--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -77,6 +77,7 @@
       .text-overflow();
       .flex-shrink();
       font: inherit;
+      min-width: 0; //Иначе input во flex контейнере будет сжиматься лишь до своей стандартной ширины
       width: 100%;
       height: 100%;
       margin: 0;
