--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -77,7 +77,6 @@
       .text-overflow();
       .flex-shrink();
       font: inherit;
-      min-width: 0; //Иначе input во flex контейнере будет сжиматься лишь до своей стандартной ширины
       width: 100%;
       height: 100%;
       margin: 0;
@@ -118,6 +117,12 @@
 
 .controls-TextBox__field-lowercase {
    text-transform: lowercase;
+}
+
+.ws-is-ie12 {
+   .controls-TextBox__field {
+      min-width: 0; //Иначе input во flex контейнере будет сжиматься лишь до своей стандартной ширины
+   }
 }
 
 
