https://online.sbis.ru/opendoc.html?guid=8e11c47e-fd6e-4aeb-99e2-5fb5c56c88c6

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -933,6 +933,7 @@ body {
        line-height: 3rem;
      }
      .controls-ListView__hoveredItem {
+        background-color:  #E0ECF5 !important;
          .controls-DataGridView__td {
              background-color:  #E0ECF5 !important;
          }
