--- a/themes/mixins.less
+++ b/themes/mixins.less
@@ -430,7 +430,7 @@
   }
   &:not(.ws-disabled):not(.controls-Click__active) {
     &:hover {
-      .@{textSelector}, .controls-Link-link {
+      .@{textSelector} {
         cursor: pointer;
         text-decoration: underline;
       }
